# PSU-CS-Wildfire-Capstone-Sp-S-25.github.io

./: .gitmodules  Cargo.toml  README.md  RUST.md  index.html  test.html
Python/: temp_maui_MERRA2_example.py
blog/: index.html
blog/blog/: index.html
publishing/: index.html  robots.txt  search_index.en.js  sitemap.xml
publishing/blog/: index.html
publishing/blog/first/: index.html
publishing/blog/second/: index.html
resources/html/: 404.html  aiTools.html  license.html  projectDesign.html  team.html  wildfireTwin.html
resources/markdown/: project-design.md  team.md
resources/profiles/: catherine.md  catherine.txt
src/: main.rs  profile.rs  routes.rs  templates.rs  web.rs
templates/: base.html  fallback.html  index.html  publishing.html  teammate_profile.html
