[package]
name = "WildfireLabWebServer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
askama = "0.14.0"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["tokio", "http1"] }
clap = { version = "4.5.37", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
    "cargo",
] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "full"] }
